ACLOCAL_AMFLAGS = -I. --install

## libtool always installs these unconditionally when autoreconf-ing or
## even just (g)libtoolize-ing:
MAINTAINERCLEANFILES = ltversion.m4 ltsugar.m4 lt~obsolete.m4 \
                       ltoptions.m4 libtool.m4

## these macros come from packages outside the standard autotools ones,
## and users might not necessarily have them:
EXTRA_DIST = ax_spec_file.m4 ax_spec_package_version.m4 pkg.m4
## (pkg.m4 is borderline)
